kubernetes/apps/default/enigma-bbs/app/httproute-web.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: enigma-bbs-web
  annotations:
    external-dns.alpha.kubernetes.io/is-public: "true"
spec:
  hostnames:
    - halfduplex.io
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: network
      sectionName: https
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal-gateway
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: enigma-bbs
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
